# RotationGame

./: README.md
Project/: Project.cabal
Project/.stack-work/install/089bf8d4/flag-cache/: Project-0.1.0.0-5xWAvgCuU4p6eNzIC0gJyN  Project-0.1.0.0-BQAUV2G50M66dry8GmjFk1  split-0.2.3.1-IJKK4pOCYGKud0jZImZke
Project/.stack-work/install/089bf8d4/lib/i386-windows-ghc-8.0.1/Project-0.1.0.0-5xWAvgCuU4p6eNzIC0gJyN/: Lib.hi
Project/.stack-work/install/089bf8d4/lib/i386-windows-ghc-8.0.1/Project-0.1.0.0-BQAUV2G50M66dry8GmjFk1/: Lib.hi  Types.hi
Project/.stack-work/install/089bf8d4/pkgdb/: Project-0.1.0.0-BQAUV2G50M66dry8GmjFk1.conf  package.cache
Project/app/: Main.hs
Project/src/: IO.hs  Lib.hs  Types.hs
